--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 </div>
 <header>
     <div class="header-container">
-        <a href="#" class="logo"><img src="../photos/logo/OKTik Logo Final_OKTik Blue Logo.svg" alt="OKTik" style="float:left;"></a>
+        <a href="#" class="logo"><img src="../photos/logo/OKTik Logo Final_OKTik Blue Logo.png" alt="OKTik" style="float:left;"></a>
         <button class="mobile-menu-btn" id="mobileMenuBtn">
             <i class="fas fa-bars"></i>
         </button>
@@ -79,8 +79,8 @@
                         </div>
                         <div class="row_space"></div>
                         <div data-swiper-parallax="400" class="slide-text">
-                          <h1>Tenant To Tenant Migrations,<br> 
-                              AUTOMATED windows upgrade projects</h1>
+                          <h1>Tenant-to-tenant migrations,<br> 
+                              automated Windows upgrade projects</h1>
                               <p class="uppercase"> OneTik is a fully Co-sell <br>
                               transactable SaaS solution</p>
                         </div>
@@ -238,7 +238,7 @@
                     <div class="row">
                         <div class="col">
                             <p>
-                                OkTik IS a niche, specialist consultancy with many years experience in successfully delivering large scale transformation programs. We accelerate the delivery of programs, avoid end-user disruption and reduce transformation costs.
+                                OkTik is a niche, specialist consultancy with many years experience in successfully delivering large scale transformation programs. We accelerate the delivery of programs, avoid end-user disruption and reduce transformation costs.
                             </p>
                         </div>
                     </div>
@@ -640,7 +640,7 @@ visit the office
                         </div>
                       </div>
                 </div>
-                <div class="col-3 side_text_style" style="padding-top: 90px;">
+                <div class="col-3 side_text_style in_styling">
                     <div class="row">
                         <div class="col">
                             <ul>
@@ -917,7 +917,15 @@ visit the office
                             <ul class="side_logos">
                                 <li>
                                     <div class="row"><img src="../photos/Microsoft_logo_(2012).png" alt=""></div>
+                                </li>
+                            </ul>
+                            <ul class="side_logos">
+                                <li>
                                     <div class="row"><img src="../photos/crayon-group-logo-vector.png" alt=""></div>
+                                </li>
+                            </ul>
+                            <ul class="side_logos">
+                                <li>
                                     <div class="row"><img src="../photos/Logo_TD_SYNNEX.png" alt=""></div>
                                 </li>
                             </ul>
@@ -934,7 +942,7 @@ visit the office
     </section>
     <section id="study" class="study section">
         <div class="container">
-            <div class="row">
+            <div class="row cola-header">
                 <div class="col-9 subheading  next_cola">
                     <h1>Customer case study</h1>
                 </div>
