--- a/views/index.ejs
+++ b/views/index.ejs
@@ -517,7 +517,7 @@
             </div>
             <div class="row_space"></div>
             <div class="row">
-                <div class="col-9">
+                <div class="col">
                     <div class="card big_card">
                         <div class="row">
                           <div class="col-xs12">
@@ -640,47 +640,39 @@ visit the office
                         </div>
                       </div>
                 </div>
-                <div class="col-3 side_text_style in_styling">
-                    <div class="row">
-                        <div class="col">
-                            <ul>
-                                <li> <br></li>
-                                <li>Orchestration </li>
-                                <li> <br></li>
-                               
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <ul>
-                                <li> <br></li>
-                                <li>Automation </li>
-                                <li> <br></li>
-                               
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <ul>
-                                <li>>200,000 clients </li>
-                                <li>using OneTik</li>
-                                <li>Automation Software</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <ul>
-                                <li>20+ years’ experience in large  </li>
-                                <li>scale complex enterprise </li>
-                                <li>transformations</li>
-                            </ul>
-                        </div>
-                    </div>
-                    
-
+            </div>
+            <div class="row in_styling">
+                <div class="col">
+                    <ul>
+                        <li> <br></li>
+                        <li>Orchestration </li>
+                        <li> <br></li>
+                       
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li> <br></li>
+                        <li>Automation </li>
+                        <li> <br></li>
+                       
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li>>200,000 clients </li>
+                        <li>using OneTik</li>
+                        <li>Automation Software</li>
+                       
+                    </ul>
+                </div>
+                <div class="col">
+                    <ul>
+                        <li>20+ years’ experience in large  </li>
+                        <li>scale complex enterprise </li>
+                        <li>transformations</li>
+                       
+                    </ul>
                 </div>
             </div>
         </div>
