--- a/public/style.css
+++ b/public/style.css
@@ -88,12 +88,18 @@ iframe{
   100% { background-position: 0px, 50px; }
 }
 section{
-  padding-top: 170px;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  border-bottom: 0.1px solid #7a7a7a;
 }
 .btn-primary{
   padding-top: 12px;
   background-color: var(--accent-color);
   border-color: var(--accent-color);
+}
+.carousel_card{
+  border-bottom: solid 7px var(--accent-color);
+  padding-bottom: 14px;
 }
 .container_hero {
   width: 100%;
@@ -1560,7 +1566,6 @@ footer {
     z-index: 99;
 }
 #home{
-  background-color: #0095DA;
   padding-top:0;
 }
 
