--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,12 +11,14 @@
 <meta property="og:url" content="hhttps://www.oktik.net/">
 <meta property="og:description" content="OkTik brings together the latest workplace technologies to deliver impactful solutions for your Enterprise IT requirements. We provide the personnel, expertise and tools to accelerate and deliver even the most complex workplace transformation.">
 <link rel="icon" type="image/x-icon" href="../photos/logo/favicon.ico">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.theme.default.min.css" integrity="sha512-kCvsy+EQTW5w/iKoI6LuPIfaDvXtMv2rkkIYdZr6un5+nGTp28w4xvyvjdUwreUobgR2RFeepd5tAYZdSbOMRQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.min.css" integrity="sha512-1ooNNmIQGmVp9lNfyNxcTgNc2FuIu/jdsQ/nHDZBDy7MP0/60wyxM7VxZTmCKfAu3r8SLJgOYbaUBhpCsQP8dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css" integrity="sha512-nSomje7hTV0g6A5X/lEZq8koYb5XZtrWD7GU2+aIJD35CePx89oxSM+S7k3hqNSpHajFbtmrjavZFxSEfl6pQA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./card.css">
 <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
@@ -26,7 +28,7 @@
 </div>
 <header>
     <div class="header-container">
-        <a href="#" class="logo"><img src="../photos/logo/OKTik Logo Final_OKTik Blue Logo.png" alt="OKTik" style="float:left;"></a>
+        <a href="#" class="logo"><img src="../photos/logo/OKTik Logo Final_OKTik Blue Logo.png" alt="" style="float:left;"></a>
         <button class="mobile-menu-btn" id="mobileMenuBtn">
             <i class="fas fa-bars"></i>
         </button>
@@ -515,30 +517,15 @@
                     </a>
                 </div>
             </div>
-            <div class="row_space"></div>
             <div class="row">
                 <div class="col">
-                    <div class="card big_card">
-                        <div class="row">
-                          <div class="col-xs12">
-                            <div id="tab" class="btn-group btn-group-justified" data-toggle="buttons">
-                              <a href="#licenseManagement" class="btn btn-default skills-name" data-toggle="tab">
+                    <div id="sync1" class="owl-carousel owl-theme">
+                        <div class="item">
+                            <a href="#licenseManagement" class="btn btn-default skills-name" data-toggle="tab">
                                 <input type="radio" />OneTik License <br>Management
-                              </a>
-                              <a href="#environmentInventory" class="btn btn-default skills-name" data-toggle="tab">
-                                <input type="radio" />OneTik Environment <br>Inventory
-                              </a>
-                              <a href="#tenantMigrator" class="btn btn-default skills-name" data-toggle="tab">
-                                <input type="radio" />OneTik Tenant<br> Migrator
-                              </a>
-                              <a href="#assetManagement" class="btn btn-default skills-name active" data-toggle="tab">
-                                <input type="radio" />OneTik Asset <br> Management
-                              </a>
-                            </div>
-                            <div class="row_space"></div>
-                            <div class="tab-content">
-                              <div class="tab-pane " id="licenseManagement">
-                                <h1 class="">OneTik License Management</h1>
+                            </a>
+                            <div class="tab-pane " id="licenseManagement">
+                                <h1 class="carousel_card">OneTik License Management</h1>
                                 <div class="row_space_in"></div>
                                 <p>
                                     Workplace priorities and productivity demands are always evolving. Often, Azure and
@@ -569,9 +556,14 @@
                                     </ul>
                                     
                               </div>
+                        </div>
+                        <div class="item">
+                            <a href="#environmentInventory" class="btn btn-default skills-name" data-toggle="tab">
+                                <input type="radio" />OneTik Environment <br>Inventory
+                              </a>
                               <div class="tab-pane" id="environmentInventory">
 
-                                <h1 class="">OneTik Environment Inventory</h1>
+                                <h1 class="carousel_card">OneTik Environment Inventory</h1>
                                 <div class="row_space_in"></div>
                                 <p>Manual Windows upgrades to a user estate are both costly and time-consuming, and in
                                     planning for the immimnent Windows 10 and Exchange on-premise end of life in 2025,
@@ -592,9 +584,14 @@ visit the office
                                     </ul>
                                     
                               </div>
-                              <div class="tab-pane" id="tenantMigrator">
+                        </div>
+                        <div class="item">
+                            <a href="#tenantMigrator" class="btn btn-default skills-name" data-toggle="tab">
+                                <input type="radio" />OneTik Tenant<br> Migrator
+                            </a>
+                            <div class="tab-pane" id="tenantMigrator">
                                 
-                                <h1 class="">OneTik Tenant Migrator</h1>
+                                <h1 class="carousel_card">OneTik Tenant Migrator</h1>
                                 <div class="row_space_in"></div>
                                 <p>A merger, acquisition or divestiture determines the need for a complex workplace
                                     service migration.</p>
@@ -612,9 +609,14 @@ visit the office
                                     </ul>
                                    
                               </div>
-                              <div class="tab-pane active" id="assetManagement">
+                        </div>
+                        <div class="item">
+                            <a href="#assetManagement" class="btn btn-default skills-name active" data-toggle="tab">
+                                <input type="radio" />OneTik Asset <br> Management
+                            </a>
+                            <div class="tab-pane active" id="assetManagement">
                                 
-                                <h1 class="">OneTik Asset Management</h1>
+                                <h1 class="carousel_card">OneTik Asset Management</h1>
                                 <div class="row_space_in"></div>
                                 <p>OkTik  offers a white-label asset management solution. Enabling IT Asset Finance and Leasing companies  to brand the client interface as their own, enhancing brand visibility and reinforcing client loyalty.</p>
 
@@ -635,12 +637,10 @@ visit the office
                                         <li>Remote monitoring and management</li>
                                     </ul>
                               </div>
-                            </div>
-                          </div>
                         </div>
-                      </div>
                 </div>
             </div>
+
             <div class="row in_styling">
                 <div class="col">
                     <ul>
@@ -1040,7 +1040,7 @@ visit the office
     <div class="footer-container">
         <div class="row">
             <div class="col-4">
-                <img src="../photos/logo/OKTik Logo Final_OKTik White Logo.svg" alt="OkTik" >
+                <img src="../photos/logo/OKTik OneTik Logos_OKTik Logo White No POL-09.png" alt="OkTik" >
             </div>
             <div class="col-8">
                 <div class="row text-align-left">
@@ -1103,6 +1103,7 @@ visit the office
     <i class="fas fa-chevron-up"></i>
 </div>
 
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js" integrity="sha512-ZHauUc/vByS6JUz/Hl1o8s2kd4QJVLAbkz8clgjtbKUJT+AG1c735aMtVLJftKQYo+LD62QryvoNa+uqy+rCHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -1110,10 +1111,13 @@ visit the office
 <script src="./slider.js"></script>
 <script src="./loader.js"></script>
 <script src="./nav.js"></script>
+
 <script src="./leonam-silva-de-souza.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js" integrity="sha512-QAV866KcCo2YSgj8D7BW+Zn3Fe5wVKTWwzKtWy8mkW+tePcJL7JYilvdfrBFQcdz4ODD48GpIPnhTp9UDI37uw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" integrity="sha512-egJ/Y+22P9NQ9aIyVCh0VCOsfydyn8eNmqBy+y2CnJG+fpRIxXMS6jbWP8tVKp0jp+NO5n8WtMUAnNnGoJKi4w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/owl.carousel.min.js" integrity="sha512-VwGGxhBX+8KC2dD2SwKEugEEsat6flDmaGqegLQ9ku7zKg+GERUd5/ymbcBhNMGxOr+jan1bcmIIHwzZf0gajA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./card.js"></script>
 
 
 </body>
