--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1085,7 +1085,7 @@ visit the office
                 </div>
                 <div class="row">
                     <div class="col terms">
-                        <p>OkTik Technology LTD. Reg No. 09923383. Vat No. GB292769353 Terms and conditions  |  Privacy Policy</p>
+                        <p>OkTik Technology LTD. Reg No. 09923383. Vat No. GB292769353 <a href="https://oktik-net.azurewebsites.net/terms-conditions">Terms and conditions</a> | <a href="https://oktik-net.azurewebsites.net/privacy-policy">Privacy Policy</a> </p>
                     </div>
                 </div>
             </div>
