--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1000,7 +1000,7 @@ visit the office
                 </div>
             </div>
             <div class="row_space_in"></div>
-            <form action="./connect.php" id="contact" name="emailContact" method="post">
+            <form action="./connect" id="contact" name="emailContact" method="post">
                 <div class="row form ">
                     <div class="col">
                         <div class="row contact-input">
