--- a/views/index.ejs
+++ b/views/index.ejs
@@ -660,8 +660,7 @@ visit the office
                 </div>
                 <div class="col">
                     <ul>
-                        <li>>200,000 clients </li>
-                        <li>using OneTik</li>
+                        <li>>200,000 clients using OneTik</li>
                         <li>Automation Software</li>
                        
                     </ul>
@@ -991,7 +990,7 @@ visit the office
     </section>
     <section id="contact" class="contact section">
         
-        <div class="container">
+F        <div class="container">
            
             
             <div class="row">
