--- a/views/index.ejs
+++ b/views/index.ejs
@@ -848,7 +848,7 @@ visit the office
             <div class="row_space"></div>
             <div class="row video_card">
                 <div class="col">
-                    <iframe src="https://www.youtube.com/embed/e4aSs8VaTAI?si=h_2QBV-IKAsv18zU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="1381" height="777" src="https://www.youtube.com/embed/76icadL358w" title="OneTik Benefits and Use Cases" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -1012,7 +1012,7 @@ F        <div class="container">
                         <div class="row contact-input">
                             <label for="message">Message</label>
                     
-                            <textarea rows="4" cols="50" id="message" name="message" form="usrform" placeholder=""></textarea>
+                            <textarea rows="4" cols="50" id="message" name="message"  placeholder=""></textarea>
                         </div>
     
                         <div name="send" value="submit" type="submit" class="row contact-button"><button>submit</button></div>
@@ -1076,7 +1076,7 @@ F        <div class="container">
                 </div>
                 <div class="row">
                     <div class="col terms">
-                        <p>OkTik Technology LTD. Reg No. 09923383. Vat No. GB292769353 <a href="https://oktik-net.azurewebsites.net/terms-conditions">Terms and conditions</a> | <a href="https://oktik-net.azurewebsites.net/privacy-policy">Privacy Policy</a> </p>
+                        <p>OkTik Technology LTD. Reg No. 09923383. Vat No. GB292769353 <a href="https://oktik-net.azurewebsites.net/terms-conditions">Terms and conditions</a> | <a href="https://www.oktik.net/privacy-policy">Privacy Policy</a> </p>
                     </div>
                 </div>
             </div>
