--- a/views/index.ejs
+++ b/views/index.ejs
@@ -982,16 +982,26 @@ visit the office
     </section>
     <section id="contact" class="contact section">
         
-F        <div class="container">
+        <div class="container">
            
             
             <div class="row">
                 <div class="col subheading  text-center">
-                    <h1>Contact us</h1>
+                    <h1>Contact us today</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col subheading  text-center">
+                    <div data-swiper-parallax="500" class="slide-btns contact-btn-container">
+                        <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="contact-btn btn btn-lg shiny-button">
+                            <img src="../photos/logo/sales@oktik.net.png" alt="OkTik">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="row_space_in"></div>
-            <form action="./connect" id="contact" name="emailContact" method="post">
+            
+            <!-- <form action="./connect" id="contact" name="emailContact" method="post">
                 <div class="row form ">
                     <div class="col">
                         <div class="row contact-input">
@@ -1019,7 +1029,7 @@ F        <div class="container">
                         
                     </div>
                 </div>
-            </form>
+            </form> -->
             
         </div>
        
