--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,21 @@
 .terms a{
   color: white;
 }
+.contact-btn-container{
+  
+}
+.contact-btn{
+  margin: 0;
+  width: 50vw;
+  height: 6vw;
+  padding-top: 18px;
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+.contact-btn img{
+    width: 25vw;
+    margin-top: 1vw;
+}
 iframe{
   width: 100%;
   height:790px;
@@ -45,10 +60,10 @@ iframe{
   padding-top: 50px;
 }
 .shiny-button{
-  width: fit-content;
+  /* width: fit-content; */
   position: relative;
 
-  border: 3px solid transparent;
+  /* border: 3px solid transparent; */
 
   background-origin: border-box;
   background-clip: padding-box, border-box;
