--- a/views/index.ejs
+++ b/views/index.ejs
@@ -993,7 +993,7 @@ visit the office
             <div class="row">
                 <div class="col subheading  text-center">
                     <div data-swiper-parallax="500" class="slide-btns contact-btn-container">
-                        <a href="https://azuremarketplace.microsoft.com/en-us/marketplace/apps/oktiktechnologyltd1583835492819.onetik_test?tab=overview" type="button" class="contact-btn btn btn-lg shiny-button">
+                        <a href="http://outlook.office365.com/" type="button" class="contact-btn btn btn-lg shiny-button">
                             <img src="../photos/logo/sales@oktik.net.png" alt="OkTik">
                         </a>
                     </div>
