--- a/views/index.ejs
+++ b/views/index.ejs
@@ -518,7 +518,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col-10">
                     <div id="sync1" class="owl-carousel owl-theme">
                         <div class="item">
                             
@@ -571,7 +571,7 @@
                                             without disruption</li>
                                         <li>
                                             Remote (including home-based) users receive an upgrade without the need to
-visit the office
+                                            visit the office
                                         </li>
                                         <li>Ensures your estate is Co-Pilot ready to maximise future investment</li>
                                         <li>Identifies risk areas for Compliance and Security Assessments</li>
@@ -630,19 +630,21 @@ visit the office
                                     </ul>
                               </div>
                         </div>
-                </div>
-            </div>
+                    </div>
 
-            <div class="row in_styling">
-                <div class="col">
-                    <ul>
-                        <li> <br></li>
-                        <li>Orchestration </li>
-                        <li> <br></li>
-                       
-                    </ul>
                 </div>
-                <div class="col">
+
+                <div class="col-2">
+                    <div class="row in_styling">
+                        <div class="col c-space">
+                            <ul>
+                                <li> <br></li>
+                                <li>Orchestration </li>
+                                <li> <br></li>
+                            
+                            </ul>
+                        </div>
+                <div class="col  c-space">
                     <ul>
                         <li> <br></li>
                         <li>Automation </li>
@@ -650,14 +652,14 @@ visit the office
                        
                     </ul>
                 </div>
-                <div class="col">
+                <div class="col  c-space">
                     <ul>
                         <li>>200,000 clients using OneTik</li>
                         <li>Automation Software</li>
                        
                     </ul>
                 </div>
-                <div class="col">
+                <div class="col  c-space">
                     <ul>
                         <li>20+ years’ experience in large  </li>
                         <li>scale complex enterprise </li>
@@ -666,6 +668,8 @@ visit the office
                     </ul>
                 </div>
             </div>
+                </div>
+
         </div>
     </section>
     <section id="services" class="services section ">
