--- a/views/index.ejs
+++ b/views/index.ejs
@@ -517,7 +517,7 @@
                     </a>
                 </div>
             </div>
-            <div class="row">
+            <div class="row hope">
                 <div class="col-10">
                     <div id="sync1" class="owl-carousel owl-theme">
                         <div class="item">
